--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "_args": [
     [
-      "@4leaf.njm/react-quill@0.0.1",
+      "@4leaf.njm/react-quill@0.0.2",
       "/Users/min/Documents/workspace/ecommerce-react-hooks-graphql-ssr/client"
     ]
   ],
-  "_from": "@4leaf.njm/react-quill@0.0.1",
-  "_id": "@4leaf.njm/react-quill@0.0.1",
+  "_from": "@4leaf.njm/react-quill@0.0.2",
+  "_id": "@4leaf.njm/react-quill@0.0.2",
   "_inBundle": false,
   "_integrity": "sha512-/W/rNCW+6QpGz8yQ9tFK5Ka/h/No1RqrcOOvCIOR092OiKzRFlU2xbPEwiP3Wgy/Dx13pi1YhjReDMX/5uotJg==",
   "_location": "/react-quill",
@@ -14,7 +14,7 @@
   "_requested": {
     "type": "version",
     "registry": true,
-    "raw": "@4leaf.njm/react-quill@0.0.1",
+    "raw": "@4leaf.njm/react-quill@0.0.2",
     "name": "@4leaf.njm/react-quill",
     "escapedName": "@4leaf.njm/react-quill",
     "rawSpec": "1.3.5",
@@ -41,7 +41,7 @@
     "create-react-class": "^15.6.0",
     "lodash": "^4.17.4",
     "prop-types": "^15.5.10",
-    "quill": "^1.3.7",
+    "@4leaf.njm/quill": "^0.0.1",
     "react-dom-factories": "^1.0.0"
   },
   "description": "The Quill rich-text editor as a React component.",
@@ -99,5 +99,5 @@
     "url": "git+https://github.com/4leaf-njm/react-quill"
   },
   "types": "types.d.ts",
-  "version": "0.0.1"
+  "version": "0.0.2"
 }
